tests/except/raise3.out
Start
TypeError:
  At raise3.py, line 2, in main()
  At raise3.py, line 5, in __init__()
