tests/except/raise3.py
def main():
    raise "String"

print "Start"
main()
print "End"
